Fixes hard to read header

--- a/readinglist.css
+++ b/readinglist.css
@@ -22,6 +22,8 @@
 }
 .gr_custom_header_1561351334 a {
   color: #9700ff;
+  background-color: #000;
+  padding: 5px;
 }
 .gr_custom_each_container_1561351334 {
   /* customize each individual book container here */
